--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
 		<img src="https://i.pcmag.com/imagery/reviews/04qyU3fPtpYIrh5qlpEJYzX-1.fit_scale.size_1028x578.v1660857418.jpg">
 		<p>Unfold your world with Galaxy Z Flip4</p>
 
+		<!-- Features -->
 		<h2>Features</h2>
 		<ol>
 			<li>Pocketability</li>
 			<li>Flex mode</li>
 			<li>IPX8</li>
 		</ol>
+
+		<!-- Explore other products -->
 		<h2>Explore other products</h2>
 		<p>Flick the below to explore other products that go with Galaxy Z Flip4</p>
 		<ul>
@@ -33,6 +36,10 @@
 		</ul>
 	</main>
 
-	<!--  -->
+	<!-- Footer element  -->
+	<footer>
+		<p>This site was created to learn html and css for next galaxy unpacked. &copy; </p>
+	</footer>
+	
 </body>
 </html>
