--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 	<!-- Footer element  -->
 	<footer>
-		<p>This site was created to learn html and css for next galaxy unpacked. &copy; </p>
+		<p>This site was created to learn html and css for next galaxy unpacked. &copy;Jenny Lee</p>
 	</footer>
-	
+
 </body>
 </html>
