--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 	<!-- Footer element  -->
 	<footer>
-		<p>This site was created to learn html and css for next galaxy unpacked. &copy;Jenny Lee</p>
+		<p>This site was created to learn HTML & CSS for the next galaxy unpacked. &copy;Jenny Lee</p>
 	</footer>
 
 </body>
