--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
 		<!-- Features -->
 		<h2>Features</h2>
 		<ol>
-			<li>Pocketability</li>
-			<li>Flex mode</li>
-			<li>IPX8</li>
+			<li>Pocketability: 
+				<br> This compact, foldable design lets you say bye to bulk without sacrificing a big screen. Slide your phone easily into your front pocket.</li>
+			<li>Flex mode: 
+				<br> Flex Mode makes doing two things at once a breeze. Snap a post-worthy solo shot hands-free on the top screen, and text on the bottom. This is a phone that holds its own.</li>
+			<li>Camera: 
+				<br> Capture your lifestyle with a cutting-edge camera. Own the night with crisp low light portraits and more stable videos. A brighter wide lens will have you snapping vivid selfies around the clock.</li>
+			<li>Cover Screen: 
+				<br> Personalize the cover screen to see just what you need. Launch Quick Shot to take photos, videos and now portraits. Respond to texts, skip songs and change settings all while keeping your phone conveniently compact.</li>
 		</ol>
 
 		<!-- Explore other products -->
