--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 	<!-- Footer element  -->
 	<footer>
-		<p>This site was created to learn HTML & CSS for the next galaxy unpacked. &copy;Jenny Lee</p>
+		<p>This site was created to learn HTML & CSS for the next<a href="https://www.samsung.com/us/">galaxy unpacked.</a> &copy; Jenny</p>
 	</footer>
 
 </body>
