--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 		<h2>Explore other products</h2>
 		<p>Flick the below to explore other products that go with Galaxy Z Flip4</p>
 		<ul>
-			<li><a href="https://www.samsung.com/us/watches/galaxy-watch5/">Galaxy Watch5</a></li>
-			<li><a href="https://www.samsung.com/us/mobile-audio/galaxy-buds2/">Galaxy Buds2</a></li>
-			<li><a href="https://www.samsung.com/us/tablets/galaxy-tab-s8/buy/">Galaxy Tab S8</a></li>
+			<li><a target="_blank" href="https://www.samsung.com/us/watches/galaxy-watch5/">Galaxy Watch5</a></li>
+			<li><a target="_blank" href="https://www.samsung.com/us/mobile-audio/galaxy-buds2/">Galaxy Buds2</a></li>
+			<li><a target="_blank" href="https://www.samsung.com/us/tablets/galaxy-tab-s8/buy/">Galaxy Tab S8</a></li>
 		</ul>
 	</main>
 
 	<!-- Footer element  -->
 	<footer>
-		<p>This site was created to learn HTML & CSS for the next<a href="https://www.samsung.com/us/">galaxy unpacked.</a> &copy; Jenny</p>
+		<p>This site was created to learn HTML & CSS for the next<a target="_blank" href="https://www.samsung.com/us/">galaxy unpacked.</a> &copy; Jenny</p>
 	</footer>
 
 </body>
