--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Samsung Unpacked</title>
+	<link rel="stylesheet" type="text/css" href="https://media-exp1.licdn.com/dms/image/C4E0BAQFGGi7DuZZB2w/company-logo_200_200/0/1618471122995?e=2147483647&v=beta&t=3aRVpJNS9-jxui-441VGIhm6vlitqFM3tYO66qjsVfg">
 </head>
 <body>
 	<!-- header element -->
@@ -43,7 +44,7 @@
 
 	<!-- Footer element  -->
 	<footer>
-		<p>This site was created to learn HTML & CSS for the next<a target="_blank" href="https://www.samsung.com/us/">galaxy unpacked.</a> &copy; Jenny</p>
+		<p>This site was created to learn HTML & CSS for the next<a target="_blank" href="https://www.samsung.com/us/"> galaxy unpacked.</a> &copy; Jenny</p>
 	</footer>
 
 </body>
