--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Samsung Unpacked</title>
-	<link rel="stylesheet" type="text/css" href="https://media-exp1.licdn.com/dms/image/C4E0BAQFGGi7DuZZB2w/company-logo_200_200/0/1618471122995?e=2147483647&v=beta&t=3aRVpJNS9-jxui-441VGIhm6vlitqFM3tYO66qjsVfg">
+	<link rel="icon" href="https://media-exp1.licdn.com/dms/image/C4E0BAQFGGi7DuZZB2w/company-logo_200_200/0/1618471122995?e=2147483647&v=beta&t=3aRVpJNS9-jxui-441VGIhm6vlitqFM3tYO66qjsVfg">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 	<!-- header element -->
