folder rename attempt 2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Samsung Unpacked</title>
 	<link rel="icon" href="https://media-exp1.licdn.com/dms/image/C4E0BAQFGGi7DuZZB2w/company-logo_200_200/0/1618471122995?e=2147483647&v=beta&t=3aRVpJNS9-jxui-441VGIhm6vlitqFM3tYO66qjsVfg">
-	<link rel="stylesheet" type="text/css" href="CSS/index.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	<!-- header element -->
