--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<p>The Galaxy Z Flip4 delivers self-expression at its best with Flex Mode hands-free functionality, improved camera features, and a premium craftsmanship design that fits easily in your pocket. 
 		</p>
 		<img src="https://i.pcmag.com/imagery/reviews/04qyU3fPtpYIrh5qlpEJYzX-1.fit_scale.size_1028x578.v1660857418.jpg">
-		<p>Unfold your world with Galaxy Z Flip4</p>
+		<p>Unfold your world with Galaxy Z Flip4 <br> </p>
 
 		<!-- Features -->
 		<h2>Features</h2>
@@ -33,7 +33,7 @@
 				<br> Capture your lifestyle with a cutting-edge camera. <br> Own the night with crisp low light portraits and more stable videos. <br> A brighter wide lens will have you snapping vivid selfies around the clock.</li>
 				<br>
 			<li>Cover Screen: 
-				<br> Personalize the cover screen to see just what you need. Launch Quick Shot to take photos, videos and now portraits. Respond to texts, skip songs and change settings all while keeping your phone conveniently compact.</li>
+				<br> Personalize the cover screen to see just what you need. <br> Launch Quick Shot to take photos, videos and now portraits. <br> Respond to texts, skip songs and change settings all while keeping your phone conveniently compact.</li>
 				<br>
 		</ol>
 
