--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- main element -->
 	<main>
 		<h2>Overview</h2>
-		<p>The Galaxy Z Flip4 delivers self-expression at its best with Flex Mode hands-free functionality, improved camera features, and a premium craftsmanship design that fits easily in your pocket. 
+		<p>The Galaxy Z Flip4 delivers self-expression at its best with Flex Mode hands-free functionality, improved camera features, <br> and a premium craftsmanship design that fits easily in your pocket. 
 		</p>
 		<img src="https://i.pcmag.com/imagery/reviews/04qyU3fPtpYIrh5qlpEJYzX-1.fit_scale.size_1028x578.v1660857418.jpg">
 		<p>Unfold your world with Galaxy Z Flip4 <br> </p>
