--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	<!-- Footer element  -->
 	<footer>
-		<p>This site was created to practice learning HTML & CSS for the next <a target="_blank" href="https://www.samsung.com/us/"> Galaxy unpacked.</a> &copy; Jenny</p>
+		<p>This site was created to practice learning HTML & CSS.</a> &copy; Jenny</p>
 	</footer>
 
 </body>
