--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<!-- Explore other products -->
 		<h2>Explore other products</h2>
-		<p>Flick the below to explore other products that go with Galaxy Z Flip4</p>
+		<p>Flick the below to explore other products that go with Galaxy Z Flip4 <br> </p>
 		<ul>
 			<li><a target="_blank" href="https://www.samsung.com/us/watches/galaxy-watch5/">Galaxy Watch5</a></li>
 			<li><a target="_blank" href="https://www.samsung.com/us/mobile-audio/galaxy-buds2/">Galaxy Buds2</a></li>
